# mariogj1987

./: A_Clear_Primer_on_Synthetic_Controls_Part_1_[WIP].ipynb  ITSA_for_casual_time_series_analysis.ipynb  LinScraper.py  Predicting_Carbon_Emission_in_Rwanda_using_Chat_GPT.ipynb  README.md  Scraping Linkeding.ipynb  Simulation_Interaction_Effects_in_a_Ridesharing_Company.ipynb  app_test.py  config.py  linkedin_articles.md  testing_functions.ipynb
data/: linkedin_jobs_first_try.csv  linkedin_jobs_second_try.csv
infrastructure/: __init__.py
menotrainer/: .env  config.py  docker-compose.yml  main_test.py  test_script_mario.py  testing_functions.ipynb
menotrainer/services/api/: Dockerfile
menotrainer/services/api/app/: main.py  worker_app.py
menotrainer/services/api/app/agent/: chains.py  graph.py  helpers.py  state.py  test_more_complicated_bot.py  tools.py
menotrainer/services/api/app/domain/: prompts.py
services/api/: README.md  pyproject.toml
services/api/app/agent/: chains.py  edges.py  graph.py  nodes.py
services/api/app/domain/: prompts.py
